# hysteresis

./: CMakeLists.txt  LICENSE  Readme.md
src/: CMakeLists.txt  hysteresis.c  hysteresis.h  main.c
tst/: CMakeLists.txt  tst_hysteresis.cpp  tst_main.cpp
